--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="round_color">#EFCF6C</color>
+    <color name="green">#51E46A</color>
+    <color name="red">#FD0000</color>
 </resources>
